fix: fix burger-logo (not link) and text-align in popup

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -123,6 +123,7 @@ a {
     font-size: 32px; 
     line-height: 35px;
     margin-bottom: 10px;
+    color: $logo-color;
 
     a {
         color: $logo-color;
@@ -808,6 +809,7 @@ a {
         flex-direction: column;
         overflow: auto;
         z-index: 3;
+        margin: 50px auto auto;
         
         &::before {
             content: "";
@@ -914,6 +916,7 @@ a {
     display: flex;
     justify-content: space-between;
     border-radius: 9px;
+    padding: 10px;
 
     &::-webkit-scrollbar {
         opacity: 0;
@@ -929,8 +932,7 @@ a {
     border-radius: 9px 0px 0px 9px;
 }
 .popup__content-text {
-    margin: 0 10px;
-    padding: 50px 10px;
+    margin-top: 50px;
 }
 .popup-pet-description {
     margin: 40px 0;
@@ -1009,7 +1011,7 @@ dd {
         min-width: 350px;
     }
     .popup__content-text{
-        padding: 10px;
+        margin-top: 10px;
     }
 }
 
@@ -1022,7 +1024,18 @@ dd {
         display: none;
     }
     .popup__content-text{
-        padding: 10px;
+        margin-top: 10px;
+        text-align: center;
+    }
+    .popup-pet-description {
+        margin: 20px 0;
+        font-size: 13px;
+        text-align: justify;
+    }
+    .popup-list {
+        row-gap: 5px;
+        text-align: start;
+        margin-left: 15px;
     }
 }
 
